# mavericks-legacysupport

./: .gitignore  CMakeLists.txt  README.md
.github/: renovate.json
.github/workflows/: release.yml
packaging/: postinstall
release-notes/: README.md
tests/: build-lib.sh  fetch-upstream.sh  package-pkg.sh  release-notes-file.sh  renovate.sh  skeleton.sh  updater-build.sh  version.bats  workflow.sh
updater/: ICON-CREDIT.txt  ed25519_key.pub
